--- a/resources/views/layouts/header.antlers.html
+++ b/resources/views/layouts/header.antlers.html
@@ -1,5 +1,4 @@
-{{# {{ dump }} #}}
-<div class="ud-header absolute left-0 top-0 z-40 flex w-full items-center bg-blue-600">
+<div class="ud-header flex w-full items-center bg-blue-600">
     <div class="container m-auto px-4">
         <div class="relative -mx-4 flex items-center justify-between">
             {{ partial:partials/header/logo }}
@@ -12,4 +11,3 @@
         </div>
     </div>
 </div>
-<!-- ====== Navbar Section End -->
