--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title ?? site:name }}</title>
-    {{ vite src="resources/js/site.js|resources/css/site.css" }}
+    {{ vite src="resources/css/animate.css|resources/css/site.css" }}
+    {{ vite src="resources/js/site.js" }}
+
+    <script src="https://wowjs.uk/dist/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </head>
-<body class="bg-gray-100 font-sans leading-normal text-gray-800">
+<body class="font-sans leading-normal text-gray-800">
 {{ partial:layouts/header }}
 
 {{ template_content }}
