--- a/resources/views/partials/header/_nav_utility.antlers.html
+++ b/resources/views/partials/header/_nav_utility.antlers.html
@@ -9,7 +9,7 @@
         </a>
         <a
             href="signup.html"
-            class="signUpBtn rounded-md bg-white bg-opacity-20 px-6 py-2 text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-dark"
+            class="signUpBtn rounded-md bg-white bg-opacity-20 px-6 py-2 text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-gray-800"
         >
             Sign Up
         </a>
